[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-cag"
version = "0.1.0"
description = "Data science tutor chatbot using Composable Agent Graph (CAG)"
authors = [{name = "Tutor Bot"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rich>=13.7",
  "typer>=0.12",
  "pydantic>=2.6",
  "networkx>=3.3",
  "httpx>=0.27",
  "streamlit>=1.38"
]

[project.scripts]
tutor-cag = "tutor_cag.cli:app"
